# flat-extension-certificate

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: make_prl_witness_figure.py  make_witness_power_figure.py  run_bridge_response.py  run_c7_jet_checks.py  run_c7_prototype.py  run_dimension_lorentz.py  run_event_relativity.py  run_intrinsic_core.py  run_spacetime_witness.py  run_toy_model.py  run_witness_power.py
experiments/: run_blind_benchmark_dryrun.py  run_blind_benchmark_hardware.py  run_blind_benchmark_v3_fez.py  run_fez_null_confirmation.py  run_step1_separator_power.py  run_v3_batch_collect.py  run_v3_diagnostics.py
paper/prl/: Makefile  README.md  REVIEWER_RISK_REGISTER.md  SUBMISSION_CHECKLIST.md  SUBMISSION_METADATA.md  cover_letter.md  main.tex  references.bib  supplement.tex
paper/prl/arxiv/: .gitignore  ms.bbl  (+2 more)
scripts/: check_ibm_connection.py  save_ibm_account.py
src/cyz_m/: __init__.py  benchmark_baselines.py  blind_benchmark.py  bridge_response.py  collective_cad.py  device_noise.py  dimension_lorentz.py  event_relativity.py  experimental_design.py  factorization.py  hardware_runner.py  jet_hankel.py  physics.py  prl.py  relational.py  spacetime_witness.py  spectral_audit.py  witness_power.py
tests/: test_blind_benchmark.py  test_bridge_response.py  test_collective_cad.py  test_core_v1.py  test_device_noise.py  test_dimension_lorentz.py  test_event_relativity.py  test_experimental_design.py  test_hardware_runner.py  test_jet_hankel.py  test_relational.py  test_spacetime_witness.py  test_stable_cad_guard.py  test_witness_power.py
(+48 files in other folders)
