[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyz-m"
version = "0.4.0"
description = "Target-blind operational spacetime witnesses and CF-RSP response audits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
authors = [{ name = "cyz_m contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
figure = ["matplotlib>=3.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
